--- a/.pylintrc
+++ b/.pylintrc
@@ -143,7 +143,9 @@ disable=print-statement,
         missing-function-docstring,
         missing-class-docstring,
         no-self-use,
-        redefined-builtin
+        redefined-builtin,
+        no-member,
+        inconsistent-return-statements
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
